--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <color name="black">#FF000000</color>
+    <color name="white">#FFFFFFFF</color>
+
     <!-- Social media and other company colors -->
     <eat-comment />
 
